--- a/Fundamentos/bloco-6-forms-responsivo/dia-2-bibliotecas/form/style.css
+++ b/Fundamentos/bloco-6-forms-responsivo/dia-2-bibliotecas/form/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+}
+
 main{
   display: flex;
   flex-direction: column;
@@ -13,19 +19,11 @@ form{
   padding: 3vw;
 }
 
-#data{
-  width: 110px;
-}
-
-.radios{
-  width: 100%;
-  display: flex;
-}
-
-.radios div{
-  width: 50%;
-}
-
 textarea {
   resize: none;
+}
+
+#data {
+  width: 135px;
+  text-align: center;
 }
