--- a/Desenvolvimento-Frontend/bloco-12-componentes-estados/my-pokedex-2/src/pokemon.css
+++ b/Desenvolvimento-Frontend/bloco-12-componentes-estados/my-pokedex-2/src/pokemon.css
@@ -7,7 +7,8 @@
   padding: 25px;
   border: 2px solid red;
   border-radius: 30px;
-  margin: 10px
+  margin: 10px;
+  box-shadow: 10px 10px rgba(0, 0, 0, 0.2);
 }
 
 .Electric {
