adicionando botao de scroll lateral no projeto netflix

--- a/Desenvolvimento-Frontend/bloco-12-componentes-estados/netflix/src/components/movieSection.css
+++ b/Desenvolvimento-Frontend/bloco-12-componentes-estados/netflix/src/components/movieSection.css
@@ -1,5 +1,27 @@
 .section-container {
   margin-bottom: 3vh;
+  display: flex;
+  align-items: center;
+}
+
+.button {
+  font-size: 4rem;
+  color: white;
+  text-decoration: none;
+  position: absolute;
+  text-shadow: 0 0 1em black;
+}
+
+.right {
+  right: 1%;
+}
+
+.left {
+  left: 1%;
+}
+
+.movie-section {
+  scroll-behavior: smooth;
 }
 
 .movie-section::-webkit-scrollbar {
