--- a/Desenvolvimento-Frontend/bloco-13-ciclo-de-vidas-de-componentes-react/dia-2-router/my-pokedex-4/src/css/pokemon.css
+++ b/Desenvolvimento-Frontend/bloco-13-ciclo-de-vidas-de-componentes-react/dia-2-router/my-pokedex-4/src/css/pokemon.css
@@ -1,11 +1,14 @@
 .poke-container {
   display: grid;
-  width: 500px;
-  height: 250px;
+  min-width: 500px;
+  height: 300px;
   place-items: center;
   border: 5px solid red;
   border-radius: 30px;
+  margin: 0 20px;
   grid-template-columns: repeat(2, 1fr);
+  box-shadow: 10px 10px rgba(0, 0, 0, 0.2);
+  transition: 2s ease;
 }
 
 .poke-container div {
