--- a/Desenvolvimento-Frontend/bloco-13-ciclo-de-vidas-de-componentes-react/dia-2-router/my-pokedex-4/src/css/app.css
+++ b/Desenvolvimento-Frontend/bloco-13-ciclo-de-vidas-de-componentes-react/dia-2-router/my-pokedex-4/src/css/app.css
@@ -35,6 +35,18 @@ h2 {
   margin-bottom: 5vh;
 }
 
+.container-informations {
+  display: flex;
+  align-items: center;
+}
+
+.container-informations div {
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .grid-locations div {
   display: grid;
   place-items: center;
@@ -58,11 +70,10 @@ h2 {
   text-align: center;
 }
 
-.flex-container {
-  right: -22%;
-  position: relative;
-  display: flex;
-  transition: 1s ease;
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 
 .absolute {
@@ -90,4 +101,12 @@ h2 {
 .right {
   top: 28%;
   right: 3%;
+}
+
+.star {
+  align-self: flex-end;
+  margin-right: 25px;
+  color: yellow;
+  font-size: 2em;
+  text-shadow: 2px 2px 10px black;
 }
